--- a/oscon/2008/tutorials/Ubiquitous.Multithreading.rdoc
+++ b/oscon/2008/tutorials/Ubiquitous.Multithreading.rdoc
@@ -1,4 +1,4 @@
-= OSCON 2008, Tutorial 3: Ubiquitous Multithreading in a Multicore World
+= OSCON 2008, Tutorial 3: Ubiquitous Multi-threading in a Multi-core World
 
 == Shift from serial to parallel
 === Process
@@ -12,7 +12,7 @@
 - eg. Quicksort -> walk bidirectionally and swap items.
 
 === Generic iteration
-- Dependences hinder paralell execution
+- Dependences hinder parallel execution
 - STL foreach is a good example, has to check the iterator before calling the function
 
 === Dealing with Dependences
@@ -35,12 +35,12 @@
 ==== Examples
 - Floating point round-off in fluid solvers (iteration process that solves a parameter, inaccuracies of floating point will introduce error)
 - MPEG compression - trading compression for parallelism
-- Search returns one of several accepable answers
+- Search returns one of several acceptable answers
 
 === Race conditions
 - Shared data, winners and losers
 
-=== Syncronization
+=== Synchronization
 ==== Low-level
 - Mutexes, condition variables (wait on condition, no lock), tricky events
 - Atomic operations: guaranteed to happen without interruption
@@ -95,7 +95,7 @@
 - <b>Remember exception handling</b>
 
 === Exception-safe mutexing using RAII
-- RAII = Resouce Acquisition is initialization
+- RAII = Resource Acquisition is initialization
   - Constructor acquires resource
   - Destructor releases resource
 
