Changing Readme again

--- a/README.rdoc
+++ b/README.rdoc
@@ -1,4 +1,5 @@
-== 08.10.08 :: Git is awesome
+== Git is awesome
+=== 8.10.08
 I really like Git.  It is really pretty cool.  I now have it installed on
 my iPod Touch, and I'm about to check out my repos on there.  **Brilliant!**
 
