--- a/code/ruby/bearify/Readme.rdoc
+++ b/code/ruby/bearify/Readme.rdoc
@@ -1,1 +1,6 @@
-https://dl.dropbox.com/u/4541445/bearify.jpg
+= Bearify!
+
+https://dl.dropbox.com/u/4541445/bearify.png
+
+This software is awesome.  It verifies PGP signatures.
+
