Adding some Boost stuff

--- a/code/ruby/bearify/Readme.rdoc
+++ b/code/ruby/bearify/Readme.rdoc
@@ -4,3 +4,9 @@ http://dl.dropbox.com/u/4541445/bearify.png
 
 This software is awesome.  It verifies PGP signatures.
 
+=== Requirements
+* libgpgme11 and libgpgme11-dev
+* rack
+* ramaze
+* ruby
+* haml
