--- a/oscon/2010/Introduction.textile
+++ b/oscon/2010/Introduction.textile
@@ -30,3 +30,10 @@ I also met "Mark Pickering":http://www.storyofthesand.com/Home_Page.html, an
 author.  He was seated next to me at dinner (at the bar), and we struck up a
 rather long conversation about various topics.  He seemed to be a really nice
 guy - I might have to buy his book.
+
+After all that, I stumbled down to "The Lucky Lab":http://www.luckylab.com/
+for a drink.  I had the Super Dog, which was totally awesome.  One was enough
+- and there were barely any people in there, probably because it was Sunday
+  night.  Overall, a good first day back in Portland.
+
+Time to get ready for the morning Tutorials.
