--- a/code/node/bitminter_query/README
+++ b/code/node/bitminter_query/README
@@ -1,3 +1,3 @@
-npm install bitminter dateformat
+npm install 
 
-* Rename KEY.example to KEY and put in proper API key
+* Copy KEY.example to KEY and put in proper API key
